# Gaussian-Blurring-CUDA

./: .gitignore  .main.cu.kate-swp  CMakeLists.txt  Image.cpp  Image.h  MM00.cu  MM01.cu  MM10.cu  MM11.cu  Makefile  README.md  compilar_tegea.txt  main.cpp  main.cu  main01_v2.cu  main_v2.cpp  nvprof_kernel00_128x128.txt  nvprof_kernel00_3072x3072.txt  nvprof_kernel00_4096x4096.txt  nvprof_kernel00_512x512.txt  program.cpp
done/: main.cpp  main00.cu  main00_v2.cu  main01_v2.cu  main_v2.cpp
paralelo/: Makefile  main00.cu  main00_v2.cu
secuencial/: CMakeLists.txt  main.cpp  main_v2.cpp
